--- a/demo.html
+++ b/demo.html
@@ -31,7 +31,9 @@
 </head>
 <body ng-app="ngApp">
 
-<div hello></div>
+<div header></div>
+
+<div footer></div>
 
 <div class="container" ng-view></div>
 
